Refs #27889; lowered z-index for .daviz-slick-table .slick-cell.editable in order to avoid hiding the data format popup

--- a/eea/app/visualization/browser/css/common.css
+++ b/eea/app/visualization/browser/css/common.css
@@ -35,7 +35,7 @@
 }
 
 .daviz-slick-table .slick-cell.editable {
-  z-index: 9999;
+  z-index: 998;
   overflow: visible;
   background: white;
   border-color: rgba(82, 168, 236, 0.8);
